# app/Http/Controllers/Auth/ResetPasswordController.php
@@ -5,6 +5,7 @@ namespace App\Http\Controllers\Auth;
 
 use App\Http\Controllers\Controller;
 use App\Traits\ResetsPasswords;
+use Illuminate\Http\Request;
 
 /**
  * Class ResetPasswordController
@@ -38,4 +39,18 @@ class ResetPasswordController extends Controller
         $this->broker = 'users';
     }
 
+    /**
+     * Reset the given user's password.
+     * @bodyParam token string required Token for resetting email
+     * @bodyParam email string required User's email
+     * @bodyParam password string required User's password
+     * @bodyParam confirm_password string required User's confirm password
+     *
+     * @param  \Illuminate\Http\Request  $request
+     * @return \Illuminate\Http\Response
+     */
+    public function postReset(Request $request)
+    {
+        return $this->reset($request);
+    }
 }
