# app/Http/Controllers/BidController.php
@@ -46,7 +46,51 @@ class BidController extends Controller
     }
 
     /**
-     * Create a bid
+     * @OA\Post(
+     *     path="/tasks/{slug}/bids",
+     *     tags={"Task"},
+     *     summary="Create a new bid",
+     *     @OA\Parameter(
+     *         description="Slug of task",
+     *         in="path",
+     *         name="slug",
+     *         required=true,
+     *         @OA\Schema(
+     *           type="string",
+     *         )
+     *     ),
+     *     @OA\RequestBody(
+     *          description="Create data format",
+     *          required=true,
+     *          @OA\MediaType(
+     *              mediaType="application/json",
+     *              @OA\Schema(
+     *                  type="object",
+     *                  @OA\Property(
+     *                      property="comment",
+     *                      description="Bid's body",
+     *                      type="string",
+     *                      example="This is a bid comment"
+     *                  ),
+     *                  @OA\Property(
+     *                      property="price",
+     *                      description="Bid's price",
+     *                      type="integer",
+     *                      format="int64",
+     *                      example="100"
+     *                  ),
+     *              )
+     *          )
+     *      ),
+     *     @OA\Response(
+     *          response=200,
+     *          description="Createa a comment successfully"
+     *     ),
+     *     @OA\Response(
+     *          response=422,
+     *          description="Validation error"
+     *     )
+     * )
      *
      * @bodyParam price string required
      * @bodyParam comment string required
